syntax = "proto3";

package auth;
option go_package = "github.com/jonashiltl/sessions-backend/packages/grpc/auth";

import "google/api/annotations.proto";
import "common/common.proto";

service AuthService {
    rpc Register (RegisterRequest) returns (RegisterResponse) {}
    rpc Login (LoginRequest) returns (LoginResponse) {}
    rpc GoogleLogin (GoogleLoginRequest) returns (LoginResponse) {}
    rpc AppleLogin (AppleLoginRequest) returns (LoginResponse) {}
    rpc VerifyEmail (VerifyEmailRequest) returns (common.MessageResponse) {}
    rpc ResendVerificationEmail (Empty) returns (common.MessageResponse) {}
}

message AuthUser {
    string id = 1;
    string provider = 2;
    string email = 3;
    bool email_verified = 4;
    string email_code = 5;
    string role = 6;
}

message RegisterResponse {
    string token = 1;
    AuthUser authUser = 2;
}

message LoginResponse {
    string token = 1;
    AuthUser authUser = 2;
}

message RegisterRequest {
    string email = 1;
    string password = 2;
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message GoogleLoginRequest {
    string token = 1;
}

message AppleLoginRequest {
    string token = 1;
}

message VerifyEmailRequest {
    string email = 1;
    string code = 2;
}

message Empty {

}